--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ app/google-services.*
 **/linux/flutter/generated_plugin_registrant.h
 **/linux/flutter/generated_plugins.cmake
 
+**/lib/firebase_options.dart
 # Coverage
 coverage/
 
@@ -161,3 +162,4 @@ pubspec_overrides.yaml
 
 # FVM Version Cache
 .fvm/
+
