--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -1,1 +1,37 @@
+name:  destributioin
 
+on:
+  push:
+    branches:
+      - 'main'
+  
+  workflow_dispatch:
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache Gradle
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Set Up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - name: Build With Gradle
+        run: ./gradlew assembleDebug
+      - name: Deploy To Firebase App Distribution
+        uses: webp/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{ secrets.APPID }}
+          serviceCredentialsFileContent: ${{ secrets.GCPID }}
+          groups: developer
+          file: app/build/outputs/apk/debug/app-debug.apk
