--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -1,4 +1,4 @@
-name:  destributioin
+name: firebase destribution
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
       - name: Build With Gradle
         run: ./gradlew assembleDebug
       - name: Deploy To Firebase App Distribution
-        uses: webp/Firebase-Distribution-Github-Action@v1
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ secrets.APPID }}
           serviceCredentialsFileContent: ${{ secrets.GCPID }}
