--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -4,34 +4,24 @@ on:
   push:
     branches:
       - 'main'
-  
-  workflow_dispatch:
 
-jobs:
-  deploy:
+
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Cache Gradle
-        uses: actions/cache@v2
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      - name: Set Up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      - name: Build With Gradle
-        run: ./gradlew assembleDebug
-      - name: Deploy To Firebase App Distribution
+          java-version: 1.8
+      - name: build release
+        run: ./gradlew assembleRelease
+      - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{ secrets.APPID }}
-          serviceCredentialsFileContent: ${{ secrets.GCPID }}
-          groups: developer
-          file: app/build/outputs/apk/debug/app-debug.apk
+          appId: ${{secrets.APPID}}
+          serviceCredentialsFileContent: ${{ secrets.GCPAPI }}
+          groups: testers
+          file: app/build/outputs/apk/release/app-release-unsigned.apk
