--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ unlinked_spec.ds
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
-**/android/key.properties
+**/android/keystore.properties
 **/android/app/google-services.json
 app/google-services.*
 
