--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
 
+
 jobs:
   build:
 
@@ -16,6 +17,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Run
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./release.jks
+      - name: Build APK
+        env:
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
+        run: |
+          flutter build apk --release --no-sound-null-safety
       - name: build release
         run: ./gradlew assembleRelease
       - name: upload artifact to Firebase App Distribution
