--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1
+        with:
+        flutter-version: '2.x'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run
