--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -13,14 +13,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: set up JDK 1.8
+      - name: set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: 17.0.10
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.16.9'
+          flutter-version: '3.19.0'
       - name: Clean Flutter
         run: flutter clean
       - name: Flutter Doctor
@@ -38,8 +38,6 @@ jobs:
           STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
         run: |
           flutter build apk
-      - name: build release
-        run: ./gradlew assembleRelease
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
