--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -8,36 +8,25 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 17.0.10
+          distribution: 'temurin'
+          java-version: '17'
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
           flutter-version: '3.19.0'
-      - name: Clean Flutter
-        run: flutter clean
-      - name: Flutter Doctor
-        run: flutter doctor -v
-      - name: Flutter Pub Get with Verbose
-        run: flutter pub get --verbose
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Run
-        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./release.jks
+
       - name: Build APK
         env:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-        run: |
-          flutter build apk
+        run: flutter build apk
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
