--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Create key
         run: |
           echo ${{ secrets.KEYSTORE_BASE64 }} | base64 -d > android/release.jks
-          echo 'storeFile=release.jks' > android/key.properties
+          echo 'storeFile=release.jks' > android/keystore.properties
           echo 'storePassword=${{ secrets.STORE_PASSWORD }}' >> android/keystore.properties
           echo 'keyPassword=${{ secrets.KEY_PASSWORD }}' >> android/keystore.properties
           echo 'keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}' >> android/keystore.properties
