--- a/.github/workflows/firedestribution.yml
+++ b/.github/workflows/firedestribution.yml
@@ -5,42 +5,41 @@ on:
     branches:
       - 'main'
 
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          java-version: 17.0.10
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.16.9'
-#      - name: Translate secrets of base64 into json
-#        env:
-#          GOOGLE_SERVICE: ${{ secrets.ANDROID_GOOGLE_SERVICE }}
-#        run:
-#            echo $GOOGLE_SERVICE | base64 --decode > ./android/app/google-services.json
-      - name: Create key
-        run: |
-          echo ${{ secrets.KEYSTORE_BASE64 }} | base64 -d > android/release.jks
-          echo 'storeFile=release.jks' > android/keystore.properties
-          echo 'storePassword=${{ secrets.STORE_PASSWORD }}' >> android/keystore.properties
-          echo 'keyPassword=${{ secrets.KEY_PASSWORD }}' >> android/keystore.properties
-          echo 'keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}' >> android/keystore.properties
+          flutter-version: '3.19.0'
+      - name: Clean Flutter
+        run: flutter clean
+      - name: Flutter Doctor
+        run: flutter doctor -v
+      - name: Flutter Pub Get with Verbose
+        run: flutter pub get --verbose
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Run
+        run: echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 -d > android/app/google-services.json
+      - name: Run
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/release.jks
       - name: Build APK
+        env:
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
         run: |
-           flutter build apk --release --build-number=$GITHUB_RUN_NUMBER
-#      - name: Build APK
-#        env:
-#          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-#          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-#          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-#            - name: Run
-#                run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./release.jks
+          flutter build apk
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
