--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,14 +57,21 @@ android {
 
     signingConfigs {
         release {
-            if (keystorePropertiesFile.exists()) {
-                def keystoreProperties = new Properties()
-                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-                keyAlias keystoreProperties['keyAlias']
-                keyPassword keystoreProperties['keyPassword']
-                storeFile file(keystoreProperties['storeFile'])
-                storePassword keystoreProperties['storePassword']
-            }
+
+//            if ("true".equals(System.getenv("GITHUB_ACTIONS"))) { // CI=true is exported by gitaction
+                storeFile file(System.getenv()["KEYSTORE_BASE64"] + "/release.jks")
+                storePassword System.getenv()["STORE_PASSWORD"]
+                keyAlias System.getenv()["KEY_ALIAS"]
+                keyPassword System.getenv()["KEY_PASSWORD"]
+
+//            } else if (keystorePropertiesFile.exists()) {
+//                def keystoreProperties = new Properties()
+//                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+//                keyAlias keystoreProperties['keyAlias']
+//                keyPassword keystoreProperties['keyPassword']
+//                storeFile file(keystoreProperties['storeFile'])
+//                storePassword keystoreProperties['storePassword']
+//            }
         }
     }
 
