--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,20 +58,19 @@ android {
     signingConfigs {
         release {
 
-//            if ("true".equals(System.getenv("GITHUB_ACTIONS"))) { // CI=true is exported by gitaction
+            if ("true".equals(System.getenv("GITHUB_ACTIONS"))) { // CI=true is exported by gitaction
                 storeFile file(System.getenv()["KEYSTORE_BASE64"] + "/release.jks")
                 storePassword System.getenv()["STORE_PASSWORD"]
                 keyAlias System.getenv()["KEY_ALIAS"]
                 keyPassword System.getenv()["KEY_PASSWORD"]
-
-//            } else if (keystorePropertiesFile.exists()) {
-//                def keystoreProperties = new Properties()
-//                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-//                keyAlias keystoreProperties['keyAlias']
-//                keyPassword keystoreProperties['keyPassword']
-//                storeFile file(keystoreProperties['storeFile'])
-//                storePassword keystoreProperties['storePassword']
-//            }
+            } else if (keystorePropertiesFile.exists()) {
+                def keystoreProperties = new Properties()
+                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+            }
         }
     }
 
