--- a/.github/workflows/destribution_andoroid.yml
+++ b/.github/workflows/destribution_andoroid.yml
@@ -6,6 +6,7 @@ on:
       - 'dev'
 jobs:
   build:
+    name: Build for iOS
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
