--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -6,6 +6,7 @@ on:
       - 'main'
 jobs:
   build:
+    name: Build for iOS
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v1
@@ -25,13 +26,11 @@ jobs:
         run: flutter pub get
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-      - name: Run
+      - name: Decode GoogleService-Info
         run: echo "${{ secrets.GOOGLE_SERVICE_INFO_BASE64 }}" | base64 -d > ios/Runner/GoogleService-Info.plist
       - name: Decode firebase_option
         run : echo "${{ secrets.FIREBASE_OPTION_BASE64 }}" | base64 -d > lib/firebase_options.dart
-      - name: Building IOS
-        run: flutter build ios
-      - name: Building IPA
+      - name: Build IPA
         run: flutter build ipa
       - name: Distribute iOS app to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
