--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Decode firebase_option
         run : echo "${{ secrets.FIREBASE_OPTION_BASE64 }}" | base64 -d > lib/firebase_options.dart
       - name: Build IPA
-        run: flutter build ipa
+        run: flutter build ipa --no-codesign
       - name: Distribute iOS app to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
