--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -7,41 +7,45 @@ on:
       - 'main'
 jobs:
   build:
-    name: Build for iOS
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17.0.10
-      - name: Setup Flutter
+      # Checks-out our repository under $GITHUB_WORKSPACE, so our job can access it
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      # Install flutter
+      - name: Flutter get
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.19.0'
-      - name: Clean Flutter
-        run: flutter clean
-      - name: Flutter Doctor
-        run: flutter doctor
-      - name: Flutter Pub Get with Verbose
-        run: flutter pub get
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Decode GoogleService-Info
-        run: echo "${{ secrets.GOOGLE_SERVICE_INFO_BASE64 }}" | base64 -d > ios/Runner/GoogleService-Info.plist
-      - name: Decode firebase_option
-        run: echo "${{ secrets.FIREBASE_OPTION_BASE64 }}" | base64 -d > lib/firebase_options.dart
+          flutter-version: '2.10.1'
+      - name: Decode ExportOptions
+        run: echo "${{ secrets.EXPORTOPTIONS_BASE64 }}" | base64 -d > ios\Runner\ExportOptions.plist
+      # Install the Apple certificate and provisioning profile
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.APPSTORE_CERT_BASE64 }}
+          P12_PASSWORD: ${{ secrets.APPSTORE_CERT_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.MOBILEPROVISION_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+      
 
-      - name: Import Provisioning Profile
-        run: mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-             touch ~/Library/MobileDevice/Provisioning\ Profiles/decoded.mobileprovision
-             echo -n '${{ secrets.MOBILEPROVISION_BASE64 }}' | base64 -d -o ~/Library/MobileDevice/Provisioning\ Profiles/decoded.mobileprovision
-
-      - name: Import Code-Signing Certificates
-        uses: Apple-Actions/import-codesign-certs@v1
-        with:
-          p12-file-base64: ${{ secrets.APPSTORE_CERT_BASE64 }}
-      - run: flutter build ipa
       - name: Distribute iOS app to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
