--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           flutter-version: '2.10.1'
       - name: Decode ExportOptions
-        run: echo "${{ secrets.EXPORTOPTIONS_BASE64 }}" | base64 -d > ios\Runner\ExportOptions.plist
+        run: echo "${{ secrets.EXPORTOPTIONS_BASE64 }}" | base64 -d > ios/Runner/ExportOptions.plist
       # Install the Apple certificate and provisioning profile
       - name: Install the Apple certificate and provisioning profile
         env:
