--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -7,7 +7,7 @@ on:
       - 'main'
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK
