--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -6,16 +6,12 @@ on:
     branches:
       - 'main'
 jobs:
-  build-ios:
+  build:
     runs-on: macos-latest
-    defaults:
-      run:
-        working-directory: app
     steps:
-      - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1.5.3
-      - name: Install Dependencies
-        run: flutter packages get
+      # Checks-out our repository under $GITHUB_WORKSPACE, so our job can access it
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Decode ExportOptions
         run: echo "${{ secrets.EXPORTOPTIONS_BASE64 }}" | base64 -d > ios/Runner/ExportOptions.plist
       # Install the Apple certificate and provisioning profile
@@ -39,26 +35,24 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
-      - run: flutter pub get
+      - name: Flutter get
+        uses: subosito/flutter-action@v1
+        with:
+           flutter-version: '2.10.1'
 
-      # Build and sign the ipa using a single flutter command
+      - run: flutter pub get
       - name: Building IPA
         run: flutter build ipa --release --export-options-plist=ios/Runner/ExportOptions.plist
 
-      # Collect the file and upload as artifact
       - name: collect ipa artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: release-ipa
-          # Path to the release files
-          path: build/ios/ipa/*.ipa
 
-      # Important! Cleanup: remove the certificate and provisioning profile from the runner!
       - name: Clean up keychain and provisioning profile
         if: ${{ always() }}
         run: |
-          security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
-          rm ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
+            security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
+            rm ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
 
       - name: Distribute iOS app to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
