--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -41,18 +41,17 @@ jobs:
            flutter-version: '3.19.0'
 
       - run: flutter pub get
+      - name: Building ios
+        run: flutter build ios
       - name: Building IPA
-        run: flutter build ipa --release --export-options-plist=ios/Runner/ExportOptions.plist
-
+        run: flutter build ipa
       - name: collect ipa artifacts
         uses: actions/upload-artifact@v2
-
       - name: Clean up keychain and provisioning profile
         if: ${{ always() }}
         run: |
             security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
             rm ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
-
       - name: Distribute iOS app to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
