--- a/.github/workflows/destribution_andoroid.yml
+++ b/.github/workflows/destribution_andoroid.yml
@@ -1,9 +1,10 @@
 name: firebase destribution
 
 on:
-  push:
-    branches:
-      - 'dev'
+  pull_request:
+    branches: [ main ]
+    types: [ closed ]
+
 jobs:
   build:
     name: Build for iOS
