--- a/.github/workflows/destribution_ios.yml
+++ b/.github/workflows/destribution_ios.yml
@@ -3,9 +3,9 @@ name: firebase destribution
 
 on:
 
-  pull_request:
-    branches: [ main ]
-    types: [ closed ]
+#  pull_request:
+#    branches: [ main ]
+#    types: [ closed ]
 
 
 jobs:
