--- a/.github/workflows/destribution_andoroid.yml
+++ b/.github/workflows/destribution_andoroid.yml
@@ -1,9 +1,9 @@
 name: firebase destribution
 
-on:
-  pull_request:
-    branches: [ main ]
-    types: [ closed ]
+#on:
+#  pull_request:
+#    branches: [ main ]
+#    types: [ closed ]
 
 jobs:
   build:
